design_justification/prompt_design_choice/pilot_n10_contact_sheets/variants/open_detection_free_parser/V1/p6_open_detection_free_parser.md
You are a parser. Translate a vision model's free-text description into the standardized output
schema plus diagnostics. Classify based ONLY on what the text states or clearly implies.
Do not invent errors it does not mention; do not drop errors it does mention.

## Input

```
outcome: {{outcome}}
description: {{description}}
confidence: {{confidence}}
```

The vision model was NOT told this is an error-detection task — it only described the
video. `outcome` is its own weak protocol judgment; `description` is its free-text account;
`confidence` is in [0,1] or null. Read the `description` and identify every failure mode it
reports, whether or not the model labeled it an error.

Only the single target tube that is picked up and vortexed is relevant; problems with
other tubes do not count.

## Canonical failure subtypes

- `cap_open` — the target tube's cap is off, missing, or not secured during handling or vortexing.
- `tube_drop` — the target tube is dropped, falls, tips over, or is released outside a rack / vortexer / gripper.
- `tube_empty` — the target tube (the one being vortexed) has no visible liquid or sample in it.
- `vortex_off` — the vortexer does not run; no visible agitation, spinning, or movement of the contents while the target tube is on it.
- `wrong_orientation` — the target tube is placed or held in an incorrect orientation (e.g. upside-down, horizontal) when it should be upright.
- `wrong_rack` — the target tube is placed into a rack or holder that cannot properly hold it (wrong size or type).
- `rack_flipped` — the destination rack or holder where the target tube is placed is upside-down, inverted, or on its side.
- `other_failure` — a real deviation from the correct execution of the target tube's vortexing that none of the subtypes above describe.

## Decision rules

0. Decide the outcome from the DESCRIPTION, not the source `outcome`.
1. A described physical deviation IS a failure even if the model did not call it an error
   (e.g. "the cap appears loose", "the tube tipped over", "the vortexer did not seem to run").
   Map each such described deviation to its best-fitting canonical subtype.
2. `outcome="success"` when the description indicates the protocol was fully followed with no
   deviation. `outcome="failure"` when it describes at least one deviation mapping to a subtype.
3. Use `outcome="ambiguous"` ONLY when the description is too vague to tell success from failure
   at all — not merely because the model did not use the word "error". When a concrete deviation
   is described, commit to `failure` and the matching subtype.
4. List every clearly-described subtype, most important first.
5. `confidence`: source unchanged, or null. `additional_failures`: iff `other_failure`.
   `ambiguous_mentions`: only genuinely undecidable mentions.

## Output

Return exactly one JSON object. Replace every value with your own:

{
  "outcome": "success", "failure" or "ambiguous",
  "failure_modes": [<canonical subtypes the description supports, most important first; empty iff success>],
  "confidence": <source confidence unchanged, or null>,
  "reasoning": "<one sentence on how you mapped the text>",
  "additional_failures": [<{ "description": "...", "evidence": "..." } iff other_failure; else []>],
  "ambiguous_mentions": [<{ "text": "...", "candidate_modes": [...], "why": "..." }; else []>]
}
